Add new text feature

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2 id="title1-section2" data-reference="t1.s2">Section 2. Responsabilities</h2>
         <h3 data-reference="3">Article 3</h2>
         <p data-reference="3.1" class="text">In hac habitasse platea dictumst. Mauris felis lacus, adipiscing et quam in, feugiat tincidunt nulla. Nam vel libero nibh. Suspendisse sollicitudin urna non convallis aliquet.</p>
-        <h1 id="title3" data-reference="t3">Title II. Economy</h1>
+        <h1 id="title2" data-reference="t2">Title II. Economy</h1>
         <h3 data-reference="4">Article 4</h3>
         <p data-reference="4.1" class="text">Nulla aliquet magna quis pharetra placerat. Pellentesque malesuada elit vitae felis consectetur accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. In sed posuere sem, sit amet iaculis ipsum.</p>
         <p data-reference="4.2" class="text">Nulla aliquet magna quis pharetra placerat. Pellentesque malesuada elit vitae felis consectetur accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. In sed posuere sem, sit amet iaculis ipsum.</p>
@@ -70,7 +70,7 @@
         <p data-reference="5.1" class="text">Donec sem massa, consectetur sit amet tempor sed, hendrerit eget tortor. Mauris dolor neque, suscipit cursus tristique ac, feugiat id urna. Nullam pharetra lorem sit amet volutpat aliquet. Cras ac ultricies ipsum. Donec id odio nec justo dapibus pulvinar. Cras nulla tellus, vulputate sed lacus vel, cursus facilisis leo.</p>
         <h3 data-reference="6">Article 6</h2>
         <p data-reference="6.1" class="text">Nulla aliquet magna quis pharetra placerat. Pellentesque malesuada elit vitae felis consectetur accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. In sed posuere sem, sit amet iaculis ipsum.</p>
-        <p data-reference="6.1" class="text">Nulla aliquet magna quis pharetra placerat. Pellentesque malesuada elit vitae felis consectetur accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. In sed posuere sem, sit amet iaculis ipsum.</p>
+        <p data-reference="6.2" class="text">Nulla aliquet magna quis pharetra placerat. Pellentesque malesuada elit vitae felis consectetur accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. In sed posuere sem, sit amet iaculis ipsum.</p>
       </div>
       <div class="column">
         <div id="law-index"></div>
@@ -113,6 +113,24 @@
           "reason": "Not in my name.",
           "author": "mike",
           "status": "rejected"
+        },
+        {
+          "id":"4", 
+          "reference": "t1",
+          "amendment": "Section 3. Environment",
+          "reason": "I miss a chapter for environment policies. Please, work on a proposal.",
+          "author": "jackie",
+          "status": "approved",
+          "extra": true
+        },
+        {
+          "id":"5", 
+          "reference": "6",
+          "amendment": "Aliquam porttitor sodales mattis. Vestibulum eros augue, fringilla in quam pulvinar, pulvinar semper elit. Nullam venenatis eros vehicula leo mollis mollis. Suspendisse sit amet turpis sit amet orci semper congue eget at lectus. ",
+          "reason": "We need to be more specific.",
+          "author": "jackie",
+          "status": "approved",
+          "extra": true
         }
       ]);
     </script>
