Little explanation added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
         <p data-reference="6.2" class="text">Nulla aliquet magna quis pharetra placerat. Pellentesque malesuada elit vitae felis consectetur accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. In sed posuere sem, sit amet iaculis ipsum.</p>
       </div>
       <div class="column">
+        <div id="explanation">
+          <h1>How it works?</h1>
+          <p>Click on any law point or paragraph. A box where you can modify the text that you see or remove it completely will appear.</p>
+          <p>You can also enter a new item, article or chapter by clicking on the button at the beginning of each section.</p>
+        </div>
         <div id="law-index"></div>
       </div>
     </div>
