Allow custom HTML structure

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             $(this)
                 .empty()
                 .append($('<span>', {
-                    'class': 'original-text',
+                    'class': 'jqa-text',
                     'html': original
                 }))
                 .append($('<a>', {
@@ -222,7 +222,7 @@
                     return false;
                 }));
         } else {
-            $(this).addClass('original-text');
+            $(this).addClass('jqa-text');
         }
     });
     </script>
